[package]
name = "queue"
version = "0.6.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true

[dependencies]
anyhow = "1.0.66"
async-nats = "0.26.0"
async-trait = "0.1"
bytes = "1.3.0"
chrono = { version = "0.4", features = [ "serde" ] }
clap = { version = "3.0.0-rc.4", features = ["derive", "env"] }
futures = "0.3.25"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = { version = "0.6", features = [ "postgres" , "runtime-tokio-rustls", "json", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

libcubr = { version = "0.1.0", path = "../libcubr" }